<resources>
    <string name="app_name">AnimeList App</string>
    <string name="anime_list">Anime List</string>
    <string name="Title">Title</string>
    <string name="animeImg">AnimeImg</string>
    <string name="rating">Rating</string>
    <string name="episodes">Episodes  -</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="read_more">Read More</string>
    <string name="year">Year -</string>
    <string name="about_anime">About anime…</string>
    <string name="favourites">Favourites</string>
    <string name="favouritesbtn">favouritesBtn</string>
    <string name="delete">Delete</string>
</resources>