<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Yellow"
        android:padding="10dp"
        android:backgroundTint="@color/NavyBlue">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/animeImg"
                tools:srcCompat="@tools:sample/avatars" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/NavyBlue"
                android:fontFamily="@font/inter_regular"
                android:padding="4dp"
                android:text="@string/Title"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:maxLines="1"/>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/NavyBlue"
                    android:fontFamily="@font/inter_regular"
                    android:padding="4dp"
                    android:text="@string/rating"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="5dp">

                    <TextView
                        android:id="@+id/tvEpisodes1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/NavyBlue"
                        android:fontFamily="@font/inter_regular"
                        android:padding="4dp"
                        android:text="@string/episodes"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvEpisodes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/NavyBlue"
                        android:fontFamily="@font/inter_regular"
                        android:padding="4dp"
                        android:text="@string/episodes"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_weight="2"/>

            </LinearLayout>

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/NavyBlue"
                    android:fontFamily="@font/inter_regular"
                    android:padding="4dp"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="5dp">

            <TextView
                android:id="@+id/tvYear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/NavyBlue"
                android:fontFamily="@font/inter_regular"
                android:padding="4dp"
                android:text="@string/year"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/NavyBlue"
                android:fontFamily="@font/inter_regular"
                android:padding="4dp"
                android:text="@string/year"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="2"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@color/buttonBackgroundColor">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/readMoreBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/buttonBackgroundColor"
                        android:text="@string/read_more"
                        android:textAllCaps="false"
                        android:layout_gravity="center"
                        android:textColor="@color/buttonTextColor"/>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@color/buttonBackgroundColor">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/saveBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/buttonBackgroundColor"
                        android:text="@string/save"
                        android:textColor="@color/buttonTextColor"
                        android:layout_gravity="center"
                        android:textAllCaps="false"/>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>